--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ body{
 
 #theme_switcher{
     position: fixed;
+    display: none;
 
 }
 
@@ -81,7 +82,7 @@ body{
     display: inline-block;
     width: 60px;
     height: 35px;
-    background-color: black;
+    background-color: darkgreen;
     border-radius: 35px;
 }
 
@@ -103,7 +104,7 @@ input:checked + .theme_switch:before {
 
 
 input:checked + .theme_switch {
-    background-color: orange;
+    background-color: var(--primary-color);
 }
 
 /* ================ 
@@ -287,8 +288,8 @@ td:hover {
 
 .suggestions {
     border: none;
-    border: 5px solid var(--primary-color);
-    background-color: var(--secondary-color);
+    border: 5px solid var(--secondary-color);
+    background-color: var(--primary-color);
     padding: 20px;
     color: var(--form-text-color);
     max-width: 600px; 
@@ -310,7 +311,7 @@ td:hover {
     padding: 12px 20px;
     margin: 8px 0;
     display: block; 
-    border: 1px solid #ccc;
+    border: 4px solid black;
     border-radius: 10px;
     box-sizing: border-box;
     text-align: center;
@@ -339,7 +340,7 @@ td:hover {
     font-weight: bolder;
     font-size: larger;
     color: var(--form-and-about-me-text-color);
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     width: 50%;
     transition: transform .2s;
   }
@@ -377,6 +378,11 @@ td:hover {
 
   .no-warning{
     color: white;
+  }
+
+  #name_error, #comments_error, #email_error{
+    color: red;
+    font-weight: bold;
   }
 
 /* ================ 
